--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Prerequisites
 *.d
 
+.idea/*
+
 # Object files
 *.o
 *.ko
@@ -50,3 +52,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+/TicTacTournament/Host/cmake-build-debug/
